--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -84,5 +84,9 @@
     <string>Granth app requires access to microphone when you will be used to record your speech at time of  press the "Mic" button.</string>
     <key>NSPhotoLibraryUsageDescription</key>
     <string>Granth app requires access to the photo library to upload your profile photo.</string>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
