--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.iqonic.fluttergranth"
+        applicationId "com.cafeead.databiblio"
         minSdkVersion 22
         targetSdkVersion 34
         versionCode 23
