--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,28 @@
 name: granth_flutter
-description: A new Book selling  Flutter application.
+description: A new Book selling Flutter application.
 version: 4.7.0
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
+  # READER
+  # epub_view_example:
+    # path: D:\projetos\flutter\databiblio-reader\example
+
+  epub_view_example:
+    git:
+      url: https://github.com/Cafe-EAD/databiblio-reader.git
+      ref: main
+      path: example
+
   # COMMON
   nb_utils: ^6.0.7
   url_launcher: ^6.2.1
   html: ^0.15.4
-  #http: ^1.1.0
   http: ^0.13.4
   intl: ^0.18.1
   share_plus: ^7.2.1
@@ -39,10 +48,10 @@ dependencies:
   # UI
   google_fonts: ^4.0.4
 
-  #Push Notification
+  # Push Notification
   onesignal_flutter: ^5.0.4
 
-  #VOICE SEARCH
+  # VOICE SEARCH
   speech_to_text: ^6.4.1
 
   # DOWNLOAD
@@ -53,48 +62,46 @@ dependencies:
 
   # PDF File
   flutter_pdfview: ^1.3.2
-  #syncfusion_flutter_pdfviewer: ^23.2.4
   syncfusion_flutter_pdfviewer: ^20.4.54
 
   # EPUB File
-  epub_view: ^3.2.0
-  vocsy_epub_viewer: ^2.0.0
-  
+  # epub_view: ^3.2.0
+  # vocsy_epub_viewer: ^2.0.0
+
   # DATABASE
   sqflite: ^2.3.0
 
-  #payment
+  # payment
   razorpay_flutter: ^1.3.5
   flutter_stripe: ^9.5.0+1
   paytm: ^3.0.1
   flutterwave_standard: ^1.0.3
 
-  #Google ads
+  # Google ads
   google_mobile_ads: ^3.1.0
 
-  #Animation
+  # Animation
   lottie: ^2.7.0
 
-  #permission
+  # permission
   permission_handler: ^11.1.0
   device_info_plus: ^9.1.1
 
   flutter_localizations:
     sdk: flutter
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.6
   mobx_codegen: ^2.4.0
-  #flutter packages pub run build_runner build --delete-conflicting-outputs
-
 
 flutter:
   uses-material-design: true
   assets:
+    - assets/
     - images/
     - images/app_icons/
     - images/app_images/
     - images/flag/
     - images/lottie/
-
