--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,14 @@ dependencies:
     sdk: flutter
 
   # READER
-  # epub_view_example:
-    # path: D:\projetos\flutter\databiblio-reader\example
-
   epub_view_example:
-    git:
-      url: https://github.com/Cafe-EAD/databiblio-reader.git
-      ref: main
-      path: example
+    path: D:\projetos\flutter\databiblio-reader\example
+
+  # epub_view_example:
+  #   git:
+  #     url: https://github.com/Cafe-EAD/databiblio-reader.git
+  #     ref: main
+  #     path: example
 
   # COMMON
   nb_utils: ^6.0.7
