--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   epub_view_example:
+    # path: ../
     git:
       url: https://github.com/Cafe-EAD/databiblio-reader.git
       ref: main
