--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   url_launcher: ^6.2.1
   html: ^0.15.4
   http: ^0.13.4
-  intl: ^0.18.1
+  intl: ^0.19.0
   share_plus: ^7.2.1
   package_info_plus: ^4.0.2
   flutter_screenutil: ^5.9.0
@@ -55,6 +55,7 @@ dependencies:
   # DOWNLOAD
   internet_file: ^1.2.0
   flutter_file_downloader: ^1.1.4
+  flutter_downloader: ^1.11.7
   path_provider: ^2.1.1
   universal_html: ^2.2.4
 
@@ -77,7 +78,7 @@ dependencies:
   # payment
   razorpay_flutter: ^1.3.5
   flutter_stripe: ^9.0.0
-  paytm: ^3.0.1
+  #paytm: ^3.0.1
   flutterwave_standard: ^1.0.3
 
   # Google ads
