--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   url_launcher: ^6.2.1
   html: ^0.15.4
   http: ^0.13.4
-  intl: ^0.19.0
+  intl: ^0.18.1
   share_plus: ^7.2.1
   package_info_plus: ^4.0.2
   flutter_screenutil: ^5.9.0
@@ -31,8 +31,8 @@ dependencies:
   animated_text_kit: ^4.2.2
 
   # Firebase
-  firebase_core: ^2.23.0
-  firebase_crashlytics: ^3.4.5
+  firebase_core: ^3.2.0
+  firebase_crashlytics: ^4.0.3
 
   # STATE MANAGEMENT
   mobx: ^2.2.1
@@ -47,7 +47,7 @@ dependencies:
   google_fonts: ^4.0.4
 
   # Push Notification
-  onesignal_flutter: ^5.0.4
+  # onesignal_flutter: ^5.0.4
 
   # VOICE SEARCH
   speech_to_text: ^6.4.1
@@ -76,8 +76,8 @@ dependencies:
   sqflite: ^2.3.0
 
   # payment
-  razorpay_flutter: ^1.3.5
-  flutter_stripe: ^9.0.0
+  # razorpay_flutter: ^1.3.5
+  # flutter_stripe: ^9.0.0
   #paytm: ^3.0.1
   flutterwave_standard: ^1.0.3
 
